edit Naive model 2

--- a/NaiveBayes.Rmd
+++ b/NaiveBayes.Rmd
@@ -31,39 +31,58 @@ nyc_clean2 <- nyc_clean %>%
 
 ```{r}
 # Run the algorithm using only data on bill length
-naive_model_1 <- naiveBayes(transportation_desert_4cat ~ 
-                              mean_income +
-                              mean_rent +
-                              unemployment_perc + 
-                              evictions_perc + 
-                              noncitizen_perc + 
-                              below_poverty_perc + 
-                              native_perc + 
-                              latinx_perc + 
-                              white_perc + 
-                              asian_perc + 
-                              school_count + 
-                              store_count + 
-                              bus_count , 
-                            data = nyc_clean2)
+# naive_model_1 <- naiveBayes(transportation_desert_4cat ~ 
+#                               mean_income +
+#                               mean_rent +
+#                               unemployment_perc + 
+#                               evictions_perc + 
+#                               noncitizen_perc + 
+#                               below_poverty_perc + 
+#                               native_perc + 
+#                               latinx_perc + 
+#                               white_perc + 
+#                               asian_perc + 
+#                               school_count + 
+#                               store_count + 
+#                               bus_count , 
+#                             data = nyc_clean2)
 
 naive_model_2 <- naiveBayes(transportation_desert_4cat ~ 
-                              mean_income + 
-                              below_poverty_perc + 
-                              evictions_perc + 
-                              school_count + 
-                              store_count, 
+                              mean_income +
+                              below_poverty_perc +
+                              eviction_count + 
+                              school_count +
+                              store_count,
                             data =nyc_clean2)
-
-
-naive_classification_summary_cv(naive_model_2, nyc_clean2, y="transportation_desert_4cat", k=10)$cv
 
 saveRDS(naive_model_2, "naive_model_2.rds")
 
-(27+3+5+52)/180
+```
+```{r}
+naive_classification_summary(naive_model_2, nyc_clean2, y="transportation_desert_4cat")
+(naive2_prediction <- naive_classification_summary_cv(naive_model_2, nyc_clean2, y="transportation_desert_4cat", k=10)$cv)
+
 ```
 
 ```{r}
+library(tidyverse)
+prediction <- as.data.frame(naive2_prediction) %>%
+  pivot_longer(
+  cols= Poor:Excellent, 
+  names_to = 'Predictions', 
+  values_to = 'Probability'
+) %>% 
+  mutate(Probability = as.numeric(str_extract(Probability,'\\d+\\.\\d+'))/100)
+
+prediction %>%  
+  ggplot(aes(x=transportation_desert_4cat, y=Probability, fill=Predictions)) + 
+  geom_bar(position="fill", stat="identity") 
+
+```
+
+```{r}
+
+#  Example of making prediciton withi new input. 
 pred <- predict(naive_model_2, 
         newdata = data.frame( 
     mean_income= 100000, 
