--- a/OrdinalModels.Rmd
+++ b/OrdinalModels.Rmd
@@ -47,10 +47,10 @@ data_test <- testing(data_split)
 
 ```{r}
 model1 <- stan_polr(transportation_desert_4num ~   mean_income + unemployment_perc + below_poverty_perc + eviction_count + uninsured_perc +white_perc + asian_perc + black_perc + latinx_perc + school_count + store_count, data =data_train, prior=R2(0.5),iter=500, seed = 86437, refresh=0, prior_PD=FALSE)
-saveRDS(model1, 'ordinal_model_1.rds')
+# saveRDS(model1, 'ordinal_model_1.rds')
 
 model2 <- stan_polr(transportation_desert_4num ~ mean_income + below_poverty_perc + eviction_count + store_count, data =data_train, prior=R2(0.5),iter=500, seed = 86437, refresh=0, prior_PD=FALSE)
-saveRDS(model2, 'ordinal_model_2.rds')
+# saveRDS(model2, 'ordinal_model_2.rds')
 
 model3 <- stan_polr(transportation_desert_4num ~white_perc + asian_perc + latinx_perc + black_perc, data =nyc_clean2, prior=NULL,iter=500, seed = 86437, refresh=0, prior_PD=FALSE)
 ```
@@ -168,5 +168,9 @@ ggplot(aggregated_df, aes(x=actual, y=value, fill=highestPred)) + geom_bar(posit
 
 
 
+```
+
+```{r}
+ggplot(nyc_clean2, aes(x=perc_covered_by_traansit)) + geom_density()
 ```
 
